# blaster2000

./: Cargo.toml  README.md
dht-distributed-inference-node-discovery/: AI_CAPABILITIES_README.md  Cargo.toml  DEPLOY_DISTRIBUTED_CLUSTER.md  DHT_CLIENT_IMPLEMENTATION.md  DHT_DISCOVERY_EXPLAINED.md  DHT_FAQ.md  DHT_SYSTEM_OUTCOMES.md  DISTRIBUTED_INFERENCE_PLAN.md  DISTRIBUTED_SETUP_SUMMARY.md  MONKEY_PATCHING_README.md  README.md  RSYNC_SHARD_SETUP.md  RUST_CLIENT_DHT_DISCOVERY.md  RUST_CLIENT_INTEGRATION.md  RUST_DHT_USAGE.md  SHARDED_MODEL_SETUP.md  SHARDING_GUIDE.md  SHARD_MODELS_GUIDE.md  UBUNTU_SERVER_DHT.md
dht-distributed-inference-node-discovery/examples/: distributed_inference_example.rs  manual_pipeline_example.rs  node_announce_example.rs
dht-distributed-inference-node-discovery/src/: dht_discovery.rs  distributed_client.rs  lib.rs  nmap.rs  node_announcement.rs
ember/: .gitignore  Cargo.toml  MONITOR-REPORT.md  README.md  build-android.ps1  build-android.sh  build-flutter.ps1  build-grpc.ps1  build-push-release.ps1  check-and-test.ps1  chicken-payload.json  clean-and-start.ps1  ember.keystore.old  inference_params.json  install-all-services.ps1  install-ember-service.ps1  install-grpc-service.ps1  install-ndk.ps1  install-output.txt  install-pinggy-service.ps1  install-promethos-worker-service.ps1  install-reminder-worker-service.ps1  instructions.txt  marquee-payload.json  monitor-logs.ps1  monitor-push-queue.ps1  pinggy.bat  pinggy.ps1  push-loader.ps1  push-payload-sample.json  push-to-ember.ps1  query  release-android.ps1  release-ember-server.ps1  release-flutter.ps1  run-feb17-server.ps1  run-servers-with-logs.ps1  run-servers.ps1  setup-keystore.ps1  sign-apk.ps1  (+4 more)
ember/.cargo/: config.toml
ember/.cursor/rules/: full-paths.mdc  no-cursor-attribution.mdc  response-format.mdc
ember/android/: gradlew.bat  keystore.properties.example  local.properties  settings.gradle.kts
ember/android/app/: build.gradle.kts
ember/android/app/src/main/: AndroidManifest.xml
ember/android/loader/: build.gradle.kts
ember/android/loader/src/main/: AndroidManifest.xml
ember/client/: Cargo.toml
ember/client/src/: ios.rs  jni.rs  lib.rs  main.rs
ember/docs/: AI-VS-CONTROL-ARCHITECTURE.html  ARCHITECTURE.md  BUGREPORT-h3-util-panic.md  COMMUNICATION-TRACE.md  CONTROL-PIPE.md  DEVELOPMENT.md  FEATURES.md  FEB17-RAG-PARAMETERS.md  PGROK-EAGLEONE-README.md  PORT-FORWARDING-AND-TUNNEL-SETUP.md  pgrok-complete-setup.sh  pgrok-eagleone-setup.sh  pgrok-simple.sh
ember/docs/images/: ember-connection-diagram.html
ember/docs/protocol/: README.md  architecture.html  control-pipe.html  event-system.html  stream-frames.html
ember/flutter_app/: README.md  REMINDER_PUSH.md  pubspec.yaml
ember/flutter_app/android/: key.properties.example
ember/flutter_app/android/app/: build.gradle.kts
ember/flutter_app/android/app/src/main/: AndroidManifest.xml
ember/flutter_app/ios/Runner/: Info.plist
ember/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
ember/flutter_app/lib/: ember_client.dart  ember_client_stub.dart  ember_client_stub_unsupported.dart  ember_ffi.dart  firebase_options.dart  main.dart  reminder_service.dart
ember/flutter_app/linux/: CMakeLists.txt
ember/flutter_app/linux/runner/: my_application.cc
ember/flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
ember/flutter_app/macos/Runner.xcodeproj/: project.pbxproj
ember/flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ember/flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
ember/flutter_app/test/: widget_test.dart
ember/flutter_app/web/: index.html  manifest.json
ember/flutter_app/windows/: CMakeLists.txt
ember/flutter_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ember/flutter_app/windows/runner/: Runner.rc  main.cpp
ember/ios/: Ember-Bridging-Header.h  build-ios.sh  build-rust.sh
ember/ios/Ember/: ContentView.swift  EmberClient.swift  Info.plist
ember/ios/Ember.xcodeproj/: project.pbxproj
ember/ios/Ember/Assets.xcassets/AccentColor.colorset/: Contents.json
ember/scripts/: detect-server-address.ps1  grpc-wrapper.ps1
ember/server/: Cargo.toml  build.rs  chat-style.css  rich-placeholder.html
ember/server/proto/: llm.proto
ember/server/src/: main.rs
src/: main.rs
(+42 files in other folders)
