[package]
name = "dht-distributed-inference-node-discovery"
version = "0.1.0"
edition = "2021"
description = "DHT-based distributed inference node discovery system"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/promethos-ai/dht-distributed-inference-node-discovery"

[lib]
name = "distributed_inference"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# QUIC client library
quinn = "0.11"

# TLS/SSL for QUIC
rustls = "0.21"
rustls-pemfile = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

[dev-dependencies]
# Testing dependencies can be added here

[[example]]
name = "distributed_inference_example"
path = "examples/distributed_inference_example.rs"

[[example]]
name = "manual_pipeline_example"
path = "examples/manual_pipeline_example.rs"

[[example]]
name = "node_announce_example"
path = "examples/node_announce_example.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
