[package]
name = "ember-client"
version = "0.1.22"
edition = "2021"
description = "Rudimentary Quinn QUIC client (run on Android or desktop)"

[lib]
name = "ember_native"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "http_proxy"
path = "src/bin/http_proxy.rs"
required-features = ["http_proxy"]

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
bytes = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
jni = { version = "0.21", optional = true }
axum = { version = "0.7", features = ["json"], optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tokio-stream = { version = "0.1", optional = true }
rcgen = { version = "0.13", optional = true }

[features]
default = []
android = ["jni"]
ios = []
flutter = []
http_proxy = ["axum", "axum-server", "tower-http", "serde", "tokio-stream", "rcgen"]
