[package]
name = "ember-server"
version = "0.1.0"
edition = "2021"
description = "QUIC bridge to Feb17 inference (run on home PC)"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[dependencies]
chrono = "0.4"
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
