[package]
name = "ember-server"
version = "0.1.22"
edition = "2021"
description = "QUIC bridge to Feb17 inference (run on home PC)"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[dependencies]
chrono = "0.4"
http = "1"
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
tonic = "0.14"
h3-util = { version = "0.0.5", features = ["quinn"] }
tonic-h3 = { version = "0.0.5", default-features = false, features = ["quinn"] }
tonic-prost = "0.14"
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1"
tokio-stream = "0.1"
